--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:layout_gravity="center"
-    android:background="#ff0000"
+    android:background="#DE2F09"
     android:orientation="horizontal">
 
     <RelativeLayout
