--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
     <color name="colorAccent">#FF4081</color>
     <color name="clr_main">#1E319D</color>
     <color name="backgrou">#FF9800</color>
+<!-- <color name="redBackground">#DE2F09</color>
+<color name="redBackground">#ce2127</color>
+-->
+    <color name="redBackground">#a10a0a</color>
+
 </resources>
